--- a/design.html
+++ b/design.html
@@ -52,7 +52,7 @@
         <article>
             <h1>Partes principales del CSS</h1>
             <p>Selectores, mediante los cuales podemos especificar qué elementos de la página nos estamos refiriendo<p>
-            <p>Atributos de estilo para definir qué cosas queremos estilizar sobre los selectores indicados</p>
+            <p></p>
         </article>    
 
         <footer>
@@ -65,6 +65,7 @@
         </footer> 
 
     </nav>
+<img src="Proyecto.png"> 
 
 </body>
 </html>
