--- a/design.html
+++ b/design.html
@@ -48,13 +48,15 @@
 
                 CSS no tiene ningún sentido sin HTML, igual que a día de hoy HTML sin CSS también resultaría imposible, ya que la web ha evolucionado de tal forma que su aspecto es fundamental y el CSS es la única vía para conseguir personalizarlo.  </p>
         </section> 
-
+ 
         <article>
-            <h1>Partes principales del CSS</h1>
-            <p>Selectores, mediante los cuales podemos especificar qué elementos de la página nos estamos refiriendo<p>
-            <p></p>
-        </article>    
 
+            <h1>Partes principales del CSS</h1>
+            <p>"Selectores, mediante los cuales podemos especificar qué elementos de la página nos estamos refiriendo"</p>
+            <p>"Atributos, de estilo para definir qué cosas queremos estilizar sobre los selectores indicados"</p>
+            <p>"Una serie de valores, que indican qué estilo se debe aplicar a cada atributo sobre cada selector. Los valores se expresan con unidades CSS, que sirven para cuantificar los valores (píxeles, puntos...)"</p>
+        </article>    
+        <img src="Proyecto.png" alt="aulaClic" width="1000" height="600">
         <footer>
             <address>
                  Marlon perez <br>
@@ -65,7 +67,7 @@
         </footer> 
 
     </nav>
-<img src="Proyecto.png" alt="aulaClic"> 
+
 
 </body>
 </html>
